# access-tool

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .python-version  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker.sh  index.html  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backend/api/: app.py  deps.py  pyproject.toml  requirements.txt  settings.py  utils.py
backend/api/config/: .env.template
backend/api/pos/: auth.py  base.py  blockchain.py  chat.py  common.py  fields.py  gift.py  jetton.py  pagination.py  sticker.py  user.py  wallet.py
backend/api/routes/: auth.py  chat.py  gift.py  jetton.py  prometheus.py  stats.py  system.py  user.py
backend/api/routes/admin/: resource.py
backend/api/services/: authentication.py  prometheus.py
backend/core/: constants.py  db.py  pyproject.toml  requirements-test.txt  requirements.txt  settings.py
backend/core/actions/: authorization.py  gift.py  jetton.py  jetton_wallet.py  nft_collection.py  stats.py  sticker.py  system.py  user.py  wallet.py
backend/core/actions/chat/: __init__.py  base.py  group.py
backend/core/actions/sticker/: __init__.py  external.py
backend/core/cli/: load_wallets_on_start.py
backend/core/config/: .env.template  .env.test
backend/core/dtos/: base.py  pagination.py  stats.py  sticker.py  user.py  wallet.py
backend/core/dtos/chat/: __init__.py
backend/core/dtos/gift/: collection.py  item.py
backend/core/enums/: jetton.py  nft.py
backend/core/exceptions/: chat.py  gift.py  rule.py  sticker.py  telethon.py
backend/core/migrations/: env.py
backend/core/migrations/versions/: 1737468906-3285a761c4fd-migrate_initial_data.py  1740178108-3db83ba500ef-telegram_chat_description.py  1748530028-010fe4431b5f-offchain_gift.py  (+12 more)
backend/core/models/: __init__.py  blockchain.py  chat.py  fields.py  gift.py  mixin.py  rule.py  sticker.py  user.py  wallet.py
backend/core/services/: cdn.py  db.py  jetton.py  nft.py  stickerdom.py  superredis.py  supertelethon.py  ton.py  user.py  wallet.py
backend/core/static/: blacklisted_wallets.txt  whitelisted_gift_collections.txt
backend/core/utils/: cache.py  chat.py  events.py  external_source.py  file.py  nft.py  price.py  sticker.py  task.py
(+793 files in other folders)
