[build-system]
requires = [ "setuptools==80.9.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "1.0.0"
description = "Access Community Tool – Core package"
authors = [
    { name="danoctua", email="danoctua@gmail.com" }
]
license = { text = "MIT" }
requires-python = "==3.13.9"
dependencies = [
    "SQLAlchemy~=2.0.34",
    "redis~=7.0.1",
    "psycopg[binary]==3.2.12",
    "pre-commit==4.4.0",
    "click==8.3.0",
    "httpx==0.28.1",
    "telethon==1.40.0",
    "celery==5.5.3",
    "celery-types==0.23.0",
    "alembic==1.17.1",
    "pydantic==2.11.5",
    "pydantic-settings==2.12.0",
    "pytonapi==0.5.0",
    "python-slugify==8.0.4",
    "aioboto3==15.5.0",
    "cryptography==46.0.3",
    "asgiref==3.10.0",
    "aiolimiter==1.2.1",
    "setuptools==80.9.0",
    "pynacl==1.6.1",
    # This one is needed only in core to raise FastAPI errors from actions
    "fastapi==0.121.1",
]
[project.optional-dependencies]
dev = [
    "pip-tools==7.5.1",
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "factory-boy==3.3.3",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.2.0",
    "respx==0.22.0",
]


[tool.setuptools.packages.find]
where = ["src"]
